--- a/src/views/daily/settings.ejs
+++ b/src/views/daily/settings.ejs
@@ -215,7 +215,7 @@
                                     console.log(5);
                                     $.ajax({
                                         type: "POST",
-                                        url: "/manager/collo_bank",
+                                        url: "/manager/settings/get",
                                         data: {
                                             file_exits:file_exits,
                                             file_name:file_name_up,
