updated with the changes in the colloborator qr_code image upload

--- a/src/views/manage/settings.ejs
+++ b/src/views/manage/settings.ejs
@@ -311,6 +311,7 @@
                                 body: formData,
                                 mode: "cors",
                               }).then(res =>{ res.json().then((data)=>{
+                                setTimeout(function() {
                                 if (data.status === true) {
                                     $.ajax({
                                         type: "POST",
@@ -332,6 +333,7 @@
                                     }
                                     });
                                 }
+                            }, 5000); 
                             });
                         });   
                         }    
