updated with colloborator image upload function

--- a/src/views/daily/settings.ejs
+++ b/src/views/daily/settings.ejs
@@ -47,6 +47,13 @@
 
                 <div class="container-fluid">
                     <div class="row">
+
+                        <form ref='uploadForm' encType="multipart/form-data" class="" action="/upload" method="post">
+                            <input type="text" name="fileName" value=""><br>
+                            <input type="file" name="foo" value=""><br>
+                            <input type="submit" name="" value="upload!">
+                          </form>
+                         
                         <div class="col-md-12">
                             <div style="padding: 10px 20px;margin-bottom: 200px;">
                                 <div class="form-group">
