updated with aws version3 image uploading

--- a/src/views/daily/settings.ejs
+++ b/src/views/daily/settings.ejs
@@ -125,7 +125,7 @@
                 type: 'POST',
                 data: formData,
                 success: function (data) {
-                    alert(data)
+                    alert(data);
                 },
                 cache: false,
                 contentType: false,
