updated with the password validation

--- a/src/views/daily/settings.ejs
+++ b/src/views/daily/settings.ejs
@@ -71,11 +71,11 @@
                                  </div>
 
                                  <label for="edit-momo-name_bank" style="color: #3498db;">Rate</label>
-                                 <input type="text" class="form-control" placeholder="Rate" name="edit_rate"
-                                 br>
-                                 <input type="text" class="form-control" placeholder="Wallet Owner Name" name="edit_username"><br>
+                                 <input type="text" class="form-control" placeholder="Rate" name="edit_rate" id="edit-momo-name_bank">
+                                 <br>
+                                 <input type="text" class="form-control" placeholder="Wallet Owner Name" name="edit_username"  id="edit-momo-name"><br>
                                  <input type="text" class="form-control" placeholder="UPI ID" name="edit_qr_id" id="edit-momo-info"><br>
-                                 <input type="text" class="form-control" placeholder="USDT Wallet Address" name="edit_upi_id">
+                                 <input type="text" class="form-control" placeholder="USDT Wallet Address" name="edit_upi_id" id="edit-momo-qr">
                                <br>
                                 <label for="qr_code" style="color: #3498db;">Upload Qr Code</label>
                                 <input type='file' name='fileUploaded' id="qr_code_scanner" accept="image/*">
